# cmake-test

./: CMakeLists.txt  proprietary.cmake
scripts/: app_post_build.cmake
z-wave-stack/app/: CMakeLists.txt
